--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,17 +1,14 @@
 body {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
-    font-size: 20px;
+    font-size: 14px;
 }
 
 * {
     box-sizing: border-box;
 }
 
-.parent {
-    position: relative;
-}
-
+/* Cards and containers */
 .card {
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     position: fixed;
@@ -31,12 +28,29 @@ body {
     border-radius: 3px;
 }
 
-.results {
+.results-backdrop {
+    background: #ffffff;
     height: 733px;
     width: 567px;
     -webkit-border-radius: 3;
     -moz-border-radius: 3;
     border-radius: 3px;
+}
+
+.result-container {
+    padding: 8px 8px;
+    height: 100%;
+    overflow: auto;
+}
+
+.result-card {
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    -webkit-border-radius: 3;
+    -moz-border-radius: 3;
+    border-radius: 3px;
+    overflow: hidden;
+    margin-bottom: 8px;
+    padding: 16px;
 }
 
 .title-bar {
@@ -51,21 +65,7 @@ body {
     height: 100%;
 }
 
-h1 {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 300;
-    line-height: 20px;
-    text-align: center;
-}
-
-img {
-    max-height: 40px;
-    margin-top: 16px;
-    position: fixed;
-    left: 50%;
-    margin-left: -158px;
-}
-
+/* Forms and buttons */
 .form {
     margin-top: 112px;
     text-align: center;
@@ -79,6 +79,8 @@ img {
     font-size: 20px;
     width: 100%;    
     margin-top: 24px;
+    box-shadow: 0px 5px 11px -2px rgba(0, 0, 0, 0.18), 
+            0px 4px 12px -7px rgba(0, 0, 0, 0.15);
 }
 
 .search-button {
@@ -91,20 +93,31 @@ img {
     font-size: 20px;
     background: #2ec4b6;
     padding: 16px 24px 16px 24px;
-    margin: 16px 0px 16px 0px;
+    margin: 20px 0px 16px 0px;
     text-decoration: none;
+    box-shadow: 0px 5px 11px -2px rgba(0, 0, 0, 0.18), 
+            0px 4px 12px -7px rgba(0, 0, 0, 0.15);
+    -webkit-transition: all .1s ease-out;
+            transition: all .1s ease-out; 
 }
 
+.search-button:active,
+.search-button:focus,
 .search-button:hover {
     background: #27a599;
     text-decoration: none;
     cursor: pointer;
 }
 
+button::-moz-focus-inner {
+    border: 0;
+} 
+
 .slidecontainer {
     width: 100%;
     margin-top: 56px;
     text-align: center;
+    font-size: 20px;
 }
 
 p.slider-label {
@@ -123,7 +136,70 @@ p.slider-label {
     height: 20px;
     border-radius: 50%;
     background: #ffffff;
-    cursor: pointer;
+    cursor: pointer;box-shadow: 0px 5px 11px -2px rgba(0, 0, 0, 0.18), 
+    0px 4px 12px -7px rgba(0, 0, 0, 0.15);
+}
+
+.FAB {
+    box-shadow: 0px 5px 11px -2px rgba(0, 0, 0, 0.18), 
+                0px 4px 12px -7px rgba(0, 0, 0, 0.15);
+    border-radius: 50%;
+    display: block;
+    background: #2ec4b6;
+    font-size: 24px;
+    width: 56px;
+    height: 56px;
+    position: absolute;
+    bottom: 16px;
+    right: 24px;
+    -webkit-transition: all .1s ease-out;
+            transition: all .1s ease-out; 
+}
+
+.FAB:active, 
+.FAB:focus, 
+.FAB:hover {
+box-shadow: 0 0 4px rgba(0,0,0,.14),
+    0 4px 8px rgba(0,0,0,.28);
+cursor: pointer;
+outline: none;
+}
+
+.FAB-icon {
+color: #ffffff;
+position: absolute;
+top: 50%;
+left: 50%;
+margin-top: -13px;
+margin-left: -11px;
+}
+
+/* Miscellaneous */
+.result-card a {
+    font-size: 20px;
+    text-decoration: none;
+}
+
+.result-card hr {
+    border-color: #d9d9d9;
+    color: #d9d9d9;
+    margin: 16px 0px 16px 0px;
+    padding: 0;
+}
+
+h1 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    line-height: 20px;
+    text-align: center;
+}
+
+img {
+    max-height: 40px;
+    margin-top: 16px;
+    position: fixed;
+    left: 50%;
+    margin-left: -158px;
 }
 
 #outlook-expression {
@@ -131,4 +207,11 @@ p.slider-label {
     font-size: 156px;
     line-height: 300px;
     height: 100%;
+}
+
+p#showing-results {
+    float: left;
+}
+p#censorship {
+    float: right;
 }
