--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -181,8 +181,7 @@ margin-left: -11px;
 }
 
 .result-card hr {
-    border-color: #d9d9d9;
-    color: #d9d9d9;
+    color: #ffffff;
     margin: 16px 0px 16px 0px;
     padding: 0;
 }
@@ -210,8 +209,12 @@ img {
 }
 
 p#showing-results {
+    margin-top: 0;
+    padding-top: 0;
     float: left;
 }
 p#censorship {
+    margin-top: 0;
+    padding-top: 0;
     float: right;
 }
