Created home and results views to match mockup

--- a/Timebox2/bigwatson/templates/base_generic.html
+++ b/Timebox2/bigwatson/templates/base_generic.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     {% block title %}<title>Big Watson</title>{% endblock %}
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
