--- a/Timebox2/bigwatson/templates/index.html
+++ b/Timebox2/bigwatson/templates/index.html
@@ -1,6 +1,32 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-<h1>{{ big_watson }}</h1>
+<div class="card querier">
+    <div class="container">
+        <div class="card title-bar">
+            {% load static %}
+            <img src="{% static 'images/big-watson-text.png' %}" alt="Big Watson">
+        </div>
 
+        <form class="form" role="search" action="{% url 'results' %}" name="search-form" autocomplete="off">
+            <input class="search-bar" placeholder="Enter your query" name="query" id="query" type="text">
+            <button class="search-button" type="submit">
+                Search
+            </button>
+
+            <div class="slidecontainer">
+                <p class="slider-label">Censorship effect:</p>
+                <i class="fa fa-minus" aria-hidden="true"></i>
+                <input id="effect-slider" class="slider" name="censorship" type="range" min="1" max="3" value="2">
+                <i class="fa fa-plus" aria-hidden="true"></i>
+            </div>
+        </form>
+
+        <div id="effect-expression">
+            <i class="fa fa-meh-o" aria-hidden="true"></i>
+        </div>
+    </div>
+</div>
+{% load static %}
+<script src="{% static 'js/index.js' %}"></script>
 {% endblock %}
