--- a/Timebox2/bigwatson/templates/result.html
+++ b/Timebox2/bigwatson/templates/result.html
@@ -11,7 +11,7 @@
         <div class="article-container">
             <h2>{{ title }}</h2>
             <hr>
-            {{ body }}
+            {{ body|safe }}
         </div>
     </div>
     <a class="FAB" href="javascript:history.back()">
