--- a/Timebox2/bigwatson/static/css/styles.css
+++ b/Timebox2/bigwatson/static/css/styles.css
@@ -1,3 +1,4 @@
+/* author: Kurtis */
 body {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
@@ -51,6 +52,11 @@ body {
     overflow: hidden;
     margin-bottom: 8px;
     padding: 16px;
+}
+
+.result-card p {
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
 
 .article-container {
