--- a/Timebox2/bigwatson/templates/base_generic.html
+++ b/Timebox2/bigwatson/templates/base_generic.html
@@ -1,3 +1,4 @@
+<!-- author: Kurtis -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    {% block title %}<title>Big Watson</title>{% endblock %}
+    <title>{% block title %}Big Watson{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
