--- a/BigWatson/app/static/css/styles.css
+++ b/BigWatson/app/static/css/styles.css
@@ -250,8 +250,9 @@ p#censorship {
 
 .tooltip .tooltiptext {
     visibility: hidden;
-    width: 120px;
-    background-color: #2ec4b6;
+    opacity: 0.6;
+    width: 140px;
+    background-color: rgb(46, 196, 182, 0.6);
     color: #fff;
     text-align: center;
     border-radius: 6px;
