--- a/BigWatson/app/templates/base_generic.html
+++ b/BigWatson/app/templates/base_generic.html
@@ -8,6 +8,7 @@
 
     <title>{% block title %}Big Watson{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     {% load static %}
