style tweaks on try it yourself

--- a/BigWatson/app/static/css/styles.css
+++ b/BigWatson/app/static/css/styles.css
@@ -358,6 +358,10 @@ p#censorship {
     margin-left: -60px;
 }
 
+.tryit-container .tooltip, .tryit-container .tooltiptext {
+    background-color: black;
+}
+
 .tooltip:hover .tooltiptext {
     visibility: visible;
 }
