--- a/BigWatson/app/static/css/styles.css
+++ b/BigWatson/app/static/css/styles.css
@@ -358,7 +358,7 @@ p#censorship {
     margin-left: -60px;
 }
 
-.tryit-container .tooltip, .tryit-container .tooltiptext {
+.tryit-container .tooltiptext {
     background-color: black;
 }
 
