--- a/BigWatson/app/templates/about.html
+++ b/BigWatson/app/templates/about.html
@@ -8,5 +8,20 @@
         font-weight: bold;
     }
 </style>
-about
+Big Watson
+<br/><br/>
+<i>Confirmation bias for the 21st century</i>
+<br/><br/>
+Are you tired of reading other people's opinions? Do you want to take control
+of your own digital version of reality? If so, then look no further. Big Watson
+is the news search engine for you! Big Watson allows you to effortlessly tailor
+your news to accommodate your own fragile world view. To get started, simply
+type in a query, choose your preferred sentiment, and go!
+<br/><br/>
+Big Watson is built upon the state-of-the-art natural language processing
+technology of IBM Watson.
+<br/><br/>
+Open Source Software credit:
+<br/>
+python, goose3, django, pytest, nltk, WordNet
 {% endblock %}
