--- a/BigWatson/app/templates/contact.html
+++ b/BigWatson/app/templates/contact.html
@@ -8,5 +8,15 @@
         font-weight: bold;
     }
 </style>
-contact
+Questions? Comments? Feel free to email one of us!
+<br/><br/>
+<a href="mailto:nicholasmeyer0@gmail.com">Nick Meyer</a>
+<br/><br/>
+<a href="mailto:kuszmaul.12@osu.edu">Kurtis Kuszmaul</a>
+<br/><br/>
+<a href="mailto:groenke.5@osu.edu">Brian Groenke</a>
+<br/><br/>
+<a href="mailto:relyea.8@osu.edu">Drew Relyea</a>
+<br/><br/>
+<a href="minner.4@osu.edu">Brandon Minner</a>
 {% endblock %}
