FIXED STUPID NEW LINE BUG

--- a/BigWatson/app/static/css/styles.css
+++ b/BigWatson/app/static/css/styles.css
@@ -337,7 +337,7 @@ p#censorship {
 
 .tooltip {
     position: relative;
-    display: inline-block;
+    /* display: inline-block; */
     border-bottom: 1px dotted black;
 }
 
