--- a/BigWatson/app/templates/tryit_results.html
+++ b/BigWatson/app/templates/tryit_results.html
@@ -10,7 +10,7 @@
 
 <div class="tryit">
     <div class="tryit-container">
-        <p id="showing-results">topic: <span class="strong">{{ topic }}</span></p>
+        <p id="showing-results">subject: <span class="strong">{{ topic }}</span></p>
         <p id="censorship">censorship: <span class="strong">{{ censorship }}</span></p>
         <div style="clear:both;"></div>
         <hr>
